Fix problem with overflow in texts

--- a/src/components/cards/big card/big-card.module.css
+++ b/src/components/cards/big card/big-card.module.css
@@ -44,6 +44,9 @@
 .footerSubtitle {
     color: #D6D6D6;
     margin-bottom: 9px;
+    max-width: 100%;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .footerCount {
