--- a/src/components/cards/small card/small-card.module.css
+++ b/src/components/cards/small card/small-card.module.css
@@ -18,4 +18,7 @@
 
 .cardTitle {
     margin: 0;
+    max-height: 90%;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
